I fixed the issue with the margins on the vendor pages as well as the the issue with the strawberries not showing up on desktop, finally I made it so that the tabs in the nav bar get bold when hovered

--- a/components/strawberry.module.css
+++ b/components/strawberry.module.css
@@ -53,6 +53,7 @@
 
 @media (min-width: 768px) {
     .mediumStrawberry {
+        display: block;
         height: 82px;
         width: 184px;
         background-image: url("/mediumStrawberryBorder.png");
